--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "configurable-ui",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "dist/configurable-ui.js",
   "scripts": {
     "build": "webpack --bail -p --config webpack.config.prod.js ",
@@ -14,9 +14,9 @@
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
-    "babel-eslint": "^8.0.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.3",
     "babel-jest": "^22.0.4",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -37,6 +37,7 @@
     "jest": "^22.0.4",
     "jest-enzyme": "^4.0.2",
     "regenerator-runtime": "^0.11.1",
+    "source-map-loader": "^0.2.3",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.5",
     "webpack-merge": "^4.1.1"
